packages/k8s/ingress.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: promo-proy-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: promo-proy-route
spec:
  parentRefs:
  - name: promo-proy-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: promo-proy-svc
      port: 8080
